--- a/Qs-Sheet-Navigation/mytemplate.ng.html
+++ b/Qs-Sheet-Navigation/mytemplate.ng.html
@@ -74,6 +74,7 @@ margin-left:0px;
 
 
 <script type="text/javascript">
+
    
  function opFilter() {
  document.getElementById("myS").style.background= "#4D4D4D";
@@ -253,7 +254,7 @@ window.onclick = function(event) {
 </div>
 
 
-<button onclick="opFilter()" class="dropbtn" id="tgle" style="border:1px solid #cccccc;border-radius:{{layout.btnborder}}px;background-color:{{layout.props.btnstyle}};width: {{layout.btn_width}}px;height:{{layout.btn_height}}px;color:{{layout.prop.colorj}}">
+<button onclick="opFilter()" class="dropbtn" id="togg" style="visibility:{{layout.prop.visibletz}};border:1px solid #cccccc;border-radius:{{layout.btnborder}}px;background-color:{{layout.props.btnstyle}};width: {{layout.btn_width}}px;height:{{layout.btn_height}}px;color:{{layout.prop.colorj}}">
 {{layout.props.buttonLabel14}}</button>
 
 
